Completed Season One

--- a/season_one.html
+++ b/season_one.html
@@ -1,97 +1,159 @@
 <!doctype html>
 <html>
-    <head>
-<meta charset="UTF-8">
-<style>
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333333;
-}
 
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 16px;
-    text-decoration: none;
-}
-
-li a:hover {
-    background-color: #111111;
-}
-</style>
+<head>
+    <meta charset="UTF-8">
+    <title> Season_One</title>
 </head>
+
+<body>
+
+    <nav>
+        <a href="Starindex.html">Home</a>
+        <a href="charcters.html">Characters</a>
+        <a href="season_one.html">Season One</a>
+    </nav>
+
+    <h1>Star vs. the Forces of Evil</h1>
+    <img src="https://media.giphy.com/media/EqaHCIczZPYKk/giphy.gif?response_id=591e3f75a755c13b580552ba" alt="media.giphy.com">
+    <hr>
+    <h2>Season One</h2>
+
+    <table>
+        <thead>
+            <th>Episode Number</th>
+            <th>Title</th>
+            <th>Air Date</th>
+        </thead>
+        <tr>
+            <td>01</td>
+            <td>"Star Comes to Earth"</td>
+            <td>March 30,2015</td>
+        </tr>
+        <tr>
+            <td>02</td>
+            <td>"Party With a Pony"</td>
+            <td>March 30,2015</td>
+        </tr>
+        <tr>
+            <td>03</td>
+            <td>"Match Marker"</td>
+            <td>March 30,2015</td>
+        </tr>
+        <tr>
+            <td>04</td>
+            <td>"School Spirit"</td>
+            <td>March 30,2015</td>
+        </tr>
+        <tr>
+            <td>05</td>
+            <td>"Monster Arm"</td>
+            <td>April 6,2015</td>
+        </tr>
+        <tr>
+            <td>06</td>
+            <td>"The Other Exchange Student"</td>
+            <td>April 6,2015</td>
+        </tr>
+        <tr>
+            <td>07</td>
+            <td>"Cheer Up, Star"</td>
+            <td>April 13,2015</td>
+        </tr>
+        <tr>
+            <td>08</td>
+            <td>"Quest Buy"</td>
+            <td>April 13,2015</td>
+        </tr>
+        <tr>
+            <td>09</td>
+            <td>"Diaz Family Vacation"</td>
+            <td>April 20,2015</td>
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>"Brittney's Party"</td>
+            <td>April 20,2015</td>
+        </tr>
+        <tr>
+            <td>11</td>
+            <td>"Mewberty"</td>
+            <td>June 15,2015</td>
+        </tr>
+        <tr>
+            <td>12</td>
+            <td>"Pixtopia"</td>
+            <td>June 15,2015</td>
+        </tr>
+        <tr>
+            <td>13</td>
+            <td>"Lobster Claws"</td>
+            <td>June 22,2015</td>
+        </tr>
+        <tr>
+            <td>14</td>
+            <td>"Sleep Spells"</td>
+            <td>June 22,2015</td>
+        </tr>
+        <tr>
+            <td>15</td>
+            <td>"Blood Moon Ball"</td>
+            <td>July 20,2015</td>
+        </tr>
+        <tr>
+            <td>16</td>
+            <td>"Fortune Cookies"</td>
+            <td>July 20,2015</td>
+        </tr>
+        <tr>
+            <td>17</td>
+            <td>"Freeze Day"</td>
+            <td>July 27,2015</td>
+        </tr>
+        <tr>
+            <td>18</td>
+            <td>"Royal Pain"</td>
+            <td>July 27,2015</td>
+        </tr>
+        <tr>
+            <td>19</td>
+            <td>"St. Olga's Reform School for Wayward Princesses"</td>
+            <td>August 10,2015</td>
+        </tr>
+        <tr>
+            <td>20</td>
+            <td>"Mewnipendacne Day"</td>
+            <td>August 17,2015</td>
+        </tr>
+        <tr>
+            <td>21</td>
+            <td>"The Banagic Incident"</td>
+            <td>August 17,2015</td>
+        </tr>
+        <tr>
+            <td>22</td>
+            <td>"Interdimensional Field Trip"</td>
+            <td>September 14,2015</td>
+        </tr>
+        <tr>
+            <td>23</td>
+            <td>"Marco Grows a Beard"</td>
+            <td>September 14,2015</td>
+        </tr>
+        <tr>
+            <td>24</td>
+            <td>"Storm the Castle"</td>
+            <td>September 21,2015</td>
+        </tr>
+    </table>
+    <hr>
+    <footer>
+        <a href=" Starindex.html ">Home</a>
+        <a href="charcters.html ">Characters</a>
+        <a href="season_one.html ">Season One</a>
+
+    </footer>
+
 </body>
 
-<ul>
-  <li><a href="Starindex.html">Home</a></li>
-  <li><a href="charcters.html">Characters</a></li>
-  <li><a href="season_one.html">Season One</a></li>
-  </ul>
-    </head>
-<body>
-<h1>Star vs. the Forces of Evil</h1>
-<img src="https://media.giphy.com/media/EqaHCIczZPYKk/giphy.gif?response_id=591e3f75a755c13b580552ba" alt="media.giphy.com>
-
-<ol type="1">
-    <li>"Star Comes to Earth"
-March 30, 2015</li>
-<li>"Party With a Pony"
-March 30, 2015</li>
-<li>"Match Maker"
-March 30, 2015</li>
-<li>"School Spirit"
-March 30, 2015</li>
-<li>"Monster Arm"
-April 6, 2015</li>
-<li>"The Other Exchange Student"
-April 6, 2015</li>
-<li>"Cheer Up, Star"
-April 13, 2015</li>
-<li>"Quest Buy"
-April 13, 2015</li>
-<li>"Diaz Family Vacation"
-April 20, 2015</li>
-<li>"Brittney's Party"
-April 20, 2015</li>
-<li>"Mewberty"
-June 15, 2015</li>
-<li>"Pixtopia"
-June 15, 2015</li>
-<li>"Lobster Claws"
-June 22, 2015</li>
-<li>"Sleep Spells"
-June 22, 2015</li>
-<li>"Blood Moon Ball"
-July 20, 2015</li>
-<li>"Fortune Cookies"
-July 20, 2015</li>
-<li>"Freeze Day"
-July 27, 2015</li>
-<li>"Royal Pain"
-July 27, 2015</li>
-<li>"St. Olga's Reform School for Wayward Princesses"
-August 10, 2015</li>
-<li>"Mewnipendance Day"
-August 17, 2015</li>
-<li>"The Banagic Incident"
-August 17, 2015</li>
-<li>"Interdimensional Field Trip"
-September 14, 2015</li>
-<li>"Marco Grows a Beard"
-September 14, 2015</li>
-<li>"Storm the Castle"
-September 21, 2015</li>
-</ol>
-    <body>
-
-        
-    </body>
 </html>
